[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_package_name"
version = "0.1.0"
authors = [{name = "Your Name", email = "you@example.com"}]
description = "A brief description of your project."
readme = "README.md"
license = {text = "MIT"}
keywords = ["example", "python" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
home = "https://github.com/qwx94390-creator/x"